--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-
-  <meta http-equiv="Content-Security-Policy" content="default-src *;
-   img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;
-   style-src  'self' 'unsafe-inline' *">
-
-  <link rel="icon" type="image/png" href="/icon.png" />
+  <link rel="icon" type="image/png" href="icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WorldWise // Keep track of your adventures</title>
 </head>
